--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,13 @@ license = "MIT"
 python = "^3.10"
 websockets = "^10.3"
 scapy = "^2.4.5"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
 black = "^22.6.0"
 pytest = "^7.1.2"
+pyreadline = "^2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
