Add python-edlink as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 	url = https://github.com/zohassadar/TetrisGYM
 	branch = ed2ntc
 
+[submodule "python-edlink"]
+	path = python-edlink
+	url = https://github.com/zohassadar/python-edlink
